k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: job-portal-ingress
  namespace: job-portal
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /api/users(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 3000
          - path: /api/jobs(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: job-service
                port:
                  number: 3000
          - path: /api/applications(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: application-service
                port:
                  number: 3000
          - path: /()(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
